# PipelineProject

./: CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  conanfile.txt  gpt.sh  secret-file  sonar-project.properties
docs/: Doxyfile
include/: MyProject.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp  test_utils.cpp
